common-applications/test-environment/openlookeng-website-test/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-XSS-Protection "1; mode=block";
      add_header X-Frame-Options "DENY";
      add_header Content-Security-Policy "script-src 'self' *.baidu.com ers.baidu.com 'unsafe-inline' 'unsafe-eval' ; object-src 'none'; frame-src 'none'";
      add_header Cache-Control "no-cache";
      add_header Pragma "no-cache";
      add_header X-Content-Type-Options "nosniff";
  name: openlookeng-website-ingress-main
  namespace: openlookeng-website
  labels: 
    app: openlookeng-website
spec:
  tls:
    - hosts:
        - openlookeng.test.osinfra.cn
      secretName: openlookeng-website-tls
  rules:
    - host: openlookeng.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: openlookeng-website-frontend-service
              servicePort: 80
            path: /
